syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.dpp.ddp_study_management.proto";
option java_outer_classname = "UserProto";

service UserService {
    rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
    int64 id = 1;
}

message UserResponse {
    int64 id = 1;
    string username = 2;
    string name = 3;
    string email = 4;
    string role = 5;
    string createdAt = 6;
}
